sort.pancake.lessons.sort.pancake.BurnedPancake.scala.error
BurnedPancake:25: error: ')' expected but '}' found.
	}
        ^